--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/OverallLeaderboardTile.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/OverallLeaderboardTile.razor
@@ -28,6 +28,7 @@
                 <table class="leaderboard-table text-white">
                     <thead>
                         <tr>
+                            <th class="rank-change-col"></th>
                             <th class="rank-col">#</th>
                             <th class="player-name-col">Player</th>
                             <th class="points-col">Pts</th>
@@ -37,7 +38,12 @@
                         @foreach (var entry in _leaderboardEntries)
                         {
                             <tr class="@(GetUserHighlightClass(entry.UserId)) @entry.UserId">
-                                <td class="rank-col fw-bold">@entry.Rank</td>
+                                <td class="rank-change-col">
+                                    <RankChangeArrow PreviousRank="@entry.SnapshotRank"
+                                                     CurrentRank="@entry.Rank"
+                                                     IsVisible="@entry.IsRoundInProgress" />
+                                </td>
+                                <td class="rank-col"><span class="fw-bold">@entry.Rank</span></td>
                                 <td class="player-name-col fw-bold">@entry.PlayerName</td>
                                 <td class="points-col fw-bold">@entry.TotalPoints</td>
                             </tr>
