--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/pages/leaderboard.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/pages/leaderboard.css
@@ -48,7 +48,7 @@
 
     .leaderboard-table .rank-change-col {
         width: 5%;
-        text-align: left;
+        padding-right: 0;
     }
 
     .leaderboard-table .player-name-col {
