--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/layout/layout.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/layout/layout.css
@@ -103,9 +103,13 @@ main.light-grey{
     justify-content: space-between;
 }
 
+.justify-center {
+    justify-content: center !important;
+}
+
 .flex-center {
     display: flex;
-    align-items: center;
+    align-items: center !important;
 }
 
 .shadow {
