--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/LeaderboardsTile.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/LeaderboardsTile.razor
@@ -38,6 +38,10 @@
                                             <table class="leaderboard-table light text-white">
                                                 <thead>
                                                     <tr>
+                                                        @if (leaderboard.Entries.First().IsRoundInProgress)
+                                                        {
+                                                            <th class="rank-change-col"></th>
+                                                        }
                                                         <th class="rank-col">#</th>
                                                         <th class="player-name-col">Player</th>
                                                         <th class="points-col">Pts</th>
@@ -47,6 +51,14 @@
                                                     @foreach (var entry in leaderboard.Entries)
                                                     {
                                                         <tr class="@(GetUserHighlightClass(entry.UserId)) test @entry.UserId">
+                                                            @if (entry.IsRoundInProgress)
+                                                            {
+                                                                <td class="rank-change-col">
+                                                                    <RankChangeArrow PreviousRank="@entry.SnapshotRank"
+                                                                                     CurrentRank="@entry.Rank"
+                                                                                     IsVisible="@entry.IsRoundInProgress" />
+                                                                </td>
+                                                            }
                                                             <td class="rank-col fw-bold">@entry.Rank</td>
                                                             <td class="player-name-col fw-bold">@entry.PlayerName</td>
                                                             <td class="points-col fw-bold">@entry.TotalPoints</td>
@@ -62,7 +74,6 @@
                     }
                 </div>
             </div>
-
 
             @if (DashboardState.Leaderboards.Count > 1)
             {
@@ -124,7 +135,7 @@
 
     private void ShowNext()
     {
-        if (_currentIndex >= DashboardState.Leaderboards.Count - 1) 
+        if (_currentIndex >= DashboardState.Leaderboards.Count - 1)
             return;
 
         _currentIndex++;
