--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/MyLeaguesTile.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/MyLeaguesTile.razor
@@ -92,7 +92,7 @@
                         <small class="text-white-50">@league.SeasonName</small>
                     </div>
 
-                    <div class="action-card-body pt-2">
+                    <div class="action-card-body pt-2 space-between">
 
                         <div class="hero-rank-container">
                             <div class="text-center w-100">
