--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/layout/layout.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/layout/layout.css
@@ -100,7 +100,7 @@ main.light-grey{
 }
 
 .space-between {
-    justify-content: space-between;
+    justify-content: space-between !important;
 }
 
 .justify-center {
@@ -129,6 +129,22 @@ main.light-grey{
     -ms-overflow-style: auto;
     scrollbar-width: auto;
 }
+
+.gradient-flex-info {
+    background: radial-gradient(circle at center, rgba(255,255,255,0.02) 0%, rgba(255,255,255,0.08) 100%);
+    border: 1px solid rgba(255,255,255,0.1);
+    border-radius: 12px;
+    padding: 0.8rem;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    box-shadow: inset 0 1px 0 rgba(255,255,255,0.15);
+    flex-direction: column;
+}
+
+    .gradient-flex-info.center {
+        justify-content: center;
+    }
 
 @media (max-width: 768px) {
     .page-container {
