Fix Home Page Classes

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Home.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Home.razor
@@ -44,7 +44,7 @@
                 </div>
             </div>
 
-            <div class="py-5 purple-1000">
+            <div class="py-5 bg-purple-1000">
                 <div class="container px-4">
                     <h2 class="text-center text-white fw-bold mb-5">Why Join Prediction League?</h2>
                     <div class="row align-items-center g-5">
@@ -97,7 +97,7 @@
                 </div>
             </div>
 
-            <div class="py-5 purple-1000">
+            <div class="py-5 bg-purple-1000">
                 <div class="container text-center text-white">
                     <h2 class="fw-bold text-white">Ready to Prove Your Punditry?</h2>
                     <p class="fs-5 my-4 col-md-8 mx-auto">The new season is just around the corner. Create your account, join a league, and start making your predictions today!</p>
