--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/MobileMatchResultCard.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/MobileMatchResultCard.razor
@@ -5,7 +5,7 @@
 @using PredictionLeague.Web.Client.Components.Pages.Boosts
 
 <div class="card slide">
-    <div class="header mobile-match-header row-layout">
+    <div class="header mobile-match-header">
         <div class="d-flex align-items-center">
             <img src="@Match.HomeTeamLogoUrl" class="match-logo-small" alt="@Match.HomeTeamName Logo" />
             <span class="mx-2 fs-5 fw-bold">@Match.HomeTeamAbbreviation vs @Match.AwayTeamAbbreviation</span>
