--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/layout/section.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/layout/section.css
@@ -29,7 +29,7 @@
     align-items: center;
     cursor: pointer;
     user-select: none;
-    margin-bottom: 0.75rem;
+    flex-direction: column;
 }
 
 .section-header-collapsible:hover {
