--- a/PredictionLeague.Web/PredictionLeague.Web.Client/_Imports.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/_Imports.razor
@@ -4,7 +4,7 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
-@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+@using Microsoft.AspNetCore.Components.WebAssembly
 @using Microsoft.JSInterop
 @using PredictionLeague.Contracts
 @using PredictionLeague.Domain.Common.Constants
